用jquery validate加上前端驗證、一些細項，比方說登入後導覽列有使用者頭像、登入後不能再去login頁面、某些地方的字超過多少後以...代替等等

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -11,6 +11,9 @@ spring:
     properties:
       hibernate:
         dialect: org.hibernate.dialect.MySQL5Dialect
+  servlet:
+    multipart:
+      location: /static/upload
 logging:
   level:
     root: info
